--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
     "compilerOptions":{
-        "target":"es6",
+        "target":"es5",
         "rootDir": "src",
         "outDir":"dist",
+        "sourceMap": true,
         "module":"commonjs",
         "removeComments": true,
         "noImplicitAny":true,
-    }
+        "lib":["es2015","dom"]
+    },
+   
 }
 
